--- a/project1/libs/css/style.css
+++ b/project1/libs/css/style.css
@@ -47,10 +47,11 @@
     }
 }
 
-* {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-}
-
-.container {
-    border: 1px solid black;
+#map { 
+    position: absolute; 
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: -1;
 }
