--- a/project1/libs/css/style.css
+++ b/project1/libs/css/style.css
@@ -49,7 +49,7 @@
 
 #map { 
     position: absolute; 
-    top: 50px;
+    top: 0;
     bottom: 0;
     left: 0;
     right: 0;
@@ -67,4 +67,78 @@ img#countryFlagImg {
 
 #searchForm {
     width: 90%;
+}
+
+
+#wikipediaLink:visited {
+    color: black;
+}
+
+#wikipediaLink:hover {
+    color: grey;
+}
+
+/* #countryOptions {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+
+    width: 250px;
+} */
+
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro);
+
+body {
+  background: #ffffff; 
+  color: #414141;
+  font: 400 17px/2em 'Source Sans Pro', sans-serif;
+}
+
+.select-box {
+  cursor: pointer;
+  position : relative;
+  max-width:  15em;
+  margin: 1em auto;
+
+  width: 100%;
+}
+
+.select,
+.label {
+  color: #414141;
+  display: block;
+  font: 400 17px/2em 'Source Sans Pro', sans-serif;
+}
+
+.select {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  padding: 5px 0;
+  height: 40px;
+  opacity: 0;
+  background: none transparent;
+  border: 0 none;
+}
+.countryOptions {
+  background: #ffffff;
+}
+
+.label {
+  position: relative;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+.open .label::after {
+   content: "▲";
+}
+.label::after {
+  content: "▼";
+  font-size: 12px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 5px 15px;
+  border-left: 5px solid rgb(233, 233, 233);
 }
