--- a/project1/libs/css/style.css
+++ b/project1/libs/css/style.css
@@ -84,16 +84,34 @@ img#countryFlagImg3 {
     color: grey;
 }
 
+img#weatherIcon1,
+img#weatherIcon2,
+img#weatherIcon3,
+img#weatherIcon4 {
+    max-width: 150px;
+    max-height: 150px;
+}
 
-
-/* #countryOptions {
+h2#currentTemp {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 10px;
+    margin: auto;
+}
 
-    width: 250px;
-} */
+h2#countryName,
+h2#countryName2,
+h2#countryName3 {
+    margin-left: 10px;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+#modalBG1,
+#modalBG2,
+#modalBG3  {
+    background-color: #ced4da;
+    border-radius: 10px;
+}
+
 
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro);
 
@@ -159,3 +177,4 @@ body {
 #newsArticle img {
     width: 100%;
 }
+
