Fixed small stuff

--- a/project1/libs/css/style.css
+++ b/project1/libs/css/style.css
@@ -65,6 +65,7 @@ img#countryFlagImg2,
 img#countryFlagImg3 {
     max-width: 50px;
     max-height: 25px;
+    border: 1px solid black;
 }
 
 #searchForm {
