--- a/project1/libs/css/style.css
+++ b/project1/libs/css/style.css
@@ -113,6 +113,10 @@ h2#countryName3 {
     border-radius: 10px;
 }
 
+#drivingSide {
+    text-transform: capitalize;
+}
+
 
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro);
 
