--- a/project1/libs/css/style.css
+++ b/project1/libs/css/style.css
@@ -117,6 +117,9 @@ h2#countryName3 {
     text-transform: capitalize;
 }
 
+.modal-backdrop {
+    background-color: transparent;
+ }
 
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro);
 
