Added hide/show for all div elements

--- a/project2/libs/css/style.css
+++ b/project2/libs/css/style.css
@@ -21,3 +21,15 @@ ul {
 a:hover {
     color: orange;
 }
+
+div#employeeProfile {
+    display: none;
+}
+
+div#departments {
+    display: none;
+}
+
+div#locations {
+    display: none;
+}
