Added delete personnel, set up insert personnel

--- a/project2/libs/css/style.css
+++ b/project2/libs/css/style.css
@@ -26,11 +26,11 @@ div#employeeProfile {
     display: none;
 }
 
-div#departments {
+div#departmentsPage {
     display: none;
 }
 
-div#locations {
+div#locationsPage {
     display: none;
 }
 
