--- a/project2/libs/css/style.css
+++ b/project2/libs/css/style.css
@@ -22,18 +22,11 @@ a:hover {
     color: orange;
 }
 
-div#employeeProfile {
-    display: none;
-}
-
-div#departmentsPage {
-    display: none;
-}
-
-div#locationsPage {
-    display: none;
-}
-
-div.template {
+div#employeeProfile,
+div#departmentsPage,
+div#locationsPage,
+div.template,
+div#createEmployee,
+div#createDepartment {
     display: none;
 }
