insert all, delete all
- insert personnel, department, location
- delete personnel, department, location when no departments attached
- changed look of forms

--- a/project2/libs/css/style.css
+++ b/project2/libs/css/style.css
@@ -27,6 +27,7 @@ div#departmentsPage,
 div#locationsPage,
 div.template,
 div#createEmployee,
-div#createDepartment {
+div#createDepartment,
+div#createLocation {
     display: none;
 }
