search filter and css

--- a/project2/libs/css/style.css
+++ b/project2/libs/css/style.css
@@ -25,7 +25,7 @@ a:hover {
 div#employeeProfile,
 div#departmentsPage,
 div#locationsPage,
-div.template,
+.template,
 div#createEmployee,
 div#createDepartment,
 div#createLocation,
