--- a/project2/libs/css/style.css
+++ b/project2/libs/css/style.css
@@ -1,3 +1,52 @@
+/* #preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 9999;
+    overflow: hidden;
+    background: #fff;
+}
+
+#preloader:before {
+    content: "";
+    position: fixed;
+    top: calc(50% - 30px);
+    left: calc(50% - 30px);
+    border: 6px solid #f2f2f2;
+    border-top: 6px solid #56829e;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    -webkit-animation: animate-preloader 1s linear infinite;
+    animation: animate-preloader 1s linear infinite;
+}
+
+@-webkit-keyframes animate-preloader {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes animate-preloader {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+} */
+
 img#profilePicture,
 img#editButton {
     width: 25px;
@@ -49,6 +98,11 @@ div.card-footer.text-muted {
 }
 
 div#bodybody {
+    margin-top: 120px;
+}
+
+div#bodybody,
+form#allSearchBar {
     max-width: 800px;
     display: block;
     margin-left: auto;
@@ -70,4 +124,10 @@ div#bodybody {
 .locationsEntry:hover,
 .departmentsEntry:hover {
     background-color: rgb(173, 173, 173);
+}
+
+div#navbar {
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
